probably done with raw input now lol :trollface:
rawinputmspaint.js actually works (but probably only for me lol)

im not even gonna lie i'm probably not adding GetRawInputBuffer because of how it works

and to think i call myself the GDI goat
you couldn't even draw a circle yet :sob:

oh yeah i just learned about the std::async template thing in future so maybe i'll investigate that a little further

--- a/scripts/d2dstatus.html
+++ b/scripts/d2dstatus.html
@@ -640,5 +640,301 @@
             <li class="UNTESTED">uniformMatrix4fv</li>
         </ul>
     </ul>
+    <p>GDI</p> <!--([A-Za-z_0-9]+)\t-->
+    <ul>
+        <li>Bitmap functions</li>
+        <ul>
+            <li>AlphaBlend</li>
+            <li>BitBlt</li>
+            <li>CreateBitmap</li>
+            <li>CreateBitmapIndirect</li>
+            <li>CreateCompatibleBitmap</li>
+            <li>CreateDIBitmap</li>
+            <li>CreateDIBSection</li>
+            <li class="NO">ExtFloodFill</li>
+            <li class="NO">GetBitmapDimensionEx</li>
+            <li class="NO">GetDIBColorTable</li>
+            <li>GetDIBits</li>
+            <li>GetPixel</li>
+            <li>GetStretchBltMode</li>
+            <li class="NO">GradientFill</li>
+            <li class="NO i">LoadBitmap</li>
+            <li>MaskBlt</li>
+            <li>PlgBlt</li>
+            <li class="NO">SetBitmapDimensionEx</li>
+            <li class="NO">SetDIBColorTable</li>
+            <li>SetDIBits</li>
+            <li class="NO">SetDIBitsToDevice</li>
+            <li>SetPixel</li>
+            <li>SetPixelV</li>
+            <li>SetStretchBltMode</li>
+            <li>StretchBlt</li>
+            <li>StretchDIBits</li>
+            <li>TransparentBlt</li>
+        </ul>
+        <li>Brush functions</li>
+        <ul>
+            <li>CreateBrushIndirect</li>
+            <li class="NO">CreateDIBPatternBrushPt</li>
+            <li>CreateHatchBrush</li>
+            <li>CreatePatternBrush</li>
+            <li>CreateSolidBrush</li>
+            <li class="NO">GetBrushOrgEx</li>
+            <li class="NO">GetSysColorBrush</li>
+            <li>PatBlt</li>
+            <li class="NO">SetBrushOrgEx</li>
+            <li>SetDCBrushColor</li>
+        </ul>
+        <li class="NO">Clipping functions</li>
+        <ul>
+            <li class="NO">ExcludeClipRect</li>
+            <li class="NO">ExtSelectClipRgn</li>
+            <li class="NO">GetClipBox</li>
+            <li class="NO">GetClipRgn</li>
+            <li class="NO">GetMetaRgn</li>
+            <li class="NO">GetRandomRgn</li>
+            <li class="NO">IntersectClipRect</li>
+            <li class="NO">OffsetClipRgn</li>
+            <li class="NO">PtVisible</li>
+            <li class="NO">RectVisible</li>
+            <li class="NO">SelectClipPath</li>
+            <li class="NO">SelectClipRgn</li>
+            <li class="NO">SetMetaRgn</li>
+        </ul>
+        <li class="NOPE">Color functions</li>
+        <li>Device Context functions</li>
+        <ul>
+            <li class="NO">CancelDC</li>
+            <li class="NO">ChangeDisplaySettings</li>
+            <li class="NO">ChangeDisplaySettingsEx</li>
+            <li>CreateCompatibleDC</li>
+            <li>CreateDC</li>
+            <li class="NO">CreateIC</li>
+            <li>DeleteDC</li>
+            <li>DeleteObject</li>
+            <li class="NO">DeviceCapabilities</li>
+            <li class="NO">DrawEscape</li>
+            <li class="NO">EnumDisplayDevices</li>
+            <li class="NO">EnumDisplaySettings</li>
+            <li class="NO">EnumDisplaySettingsEx</li>
+            <li class="NO">EnumObjects</li>
+            <li class="NO">EnumObjectsProc</li>
+            <li>GetCurrentObject</li> <!--wow i wish i found this function sooner-->
+            <li>GetDC</li>
+            <li class="NO">GetDCBrushColor</li>
+            <li>GetDCEx</li>
+            <li class="NO">GetDCOrgEx</li>
+            <li class="NO">GetDCPenColor</li>
+            <li class="NO">GetDeviceCaps</li>
+            <li class="NO">GetLayout</li>
+            <li class="NO">GetObject</li>
+            <li class="NO">GetObjectType</li>
+            <li>GetStockObject</li>
+            <li>ReleaseDC</li>
+            <li class="NO">ResetDC</li>
+            <li>RestoreDC</li>
+            <li>SaveDC</li>
+            <li>SelectObject</li>
+            <li>SetDCBrushColor</li>
+            <li>SetDCPenColor</li>
+            <li class="NO">SetLayout</li>
+            <li>WindowFromDC</li>
+        </ul>
+        <li>Filled shapes</li>
+        <ul>
+            <li class="NO">Chord</li>
+            <li>Ellipse</li>
+            <li>FillRect</li>
+            <li class="NO">FrameRect</li>
+            <li class="NO">InvertRect</li>
+            <li class="NO">Pie</li>
+            <li class="NO">Polygon</li>
+            <li class="NO">PolyPolygon</li>
+            <li>Rectangle</li>
+            <li class="NO">RoundRect</li>
+        </ul>
+        <li>Font and Text functions</li>
+        <ul>
+            <li class="NO">AddFontMemResourceEx</li>
+            <li class="NO">AddFontResource</li>
+            <li class="NO">AddFontResourceEx</li>
+            <li>CreateFont</li>
+            <li>CreateFontIndirect</li>
+            <li class="NO">CreateFontIndirectEx</li>
+            <li>DrawText</li>
+            <li class="NO">DrawTextEx</li>
+            <li>EnumFontFamExProc</li>
+            <li>EnumFontFamiliesEx</li>
+            <li class="NO">ExtTextOut</li>
+            <li class="NO">GetAspectRatioFilterEx</li>
+            <li class="NO">GetCharABCWidths</li>
+            <li class="NO">GetCharABCWidthsFloat</li>
+            <li class="NO">GetCharABCWidthsI</li>
+            <li class="NO">GetCharacterPlacement</li>
+            <li class="NO">GetCharWidth32</li>
+            <li class="NO">GetCharWidthFloat</li>
+            <li class="NO">GetCharWidthI</li>
+            <li class="NO">GetFontData</li>
+            <li class="NO">GetFontLanguageInfo</li>
+            <li class="NO">GetFontUnicodeRanges</li>
+            <li class="NO">GetGlyphIndices</li>
+            <li class="NO">GetGlyphOutline</li>
+            <li class="NO">GetKerningPairs</li>
+            <li class="NO">GetOutlineTextMetrics</li>
+            <li class="NO">GetRasterizerCaps</li>
+            <li class="NO">GetTabbedTextExtent</li>
+            <li class="NO">GetTextAlign</li>
+            <li class="NO">GetTextCharacterExtra</li>
+            <li class="NO">GetTextColor</li>
+            <li class="NO">GetTextExtentExPoint</li>
+            <li class="NO">GetTextExtentExPointI</li>
+            <li class="NO">GetTextExtentPoint32</li>
+            <li class="NO">GetTextExtentPointI</li>
+            <li class="NO">GetTextFace</li>
+            <li class="NO">GetTextMetrics</li>
+            <li class="NO">PolyTextOut</li>
+            <li class="NO">RemoveFontMemResourceEx</li>
+            <li class="NO">RemoveFontResource</li>
+            <li class="NO">RemoveFontResourceEx</li>
+            <li class="NO">SetMapperFlags</li>
+            <li class="NO">SetTextAlign</li>
+            <li class="NO">SetTextCharacterExtra</li>
+            <li>SetTextColor</li>
+            <li class="NO">SetTextJustification</li>
+            <li class="NO">TabbedTextOut</li>
+            <li>TextOut</li>
+        </ul>
+        <li>Line and Curve functions</li>
+        <ul>
+            <li class="NO">AngleArc</li>
+            <li class="NO">Arc</li>
+            <li class="NO">ArcTo</li>
+            <li class="NO">GetArcDirection</li>
+            <li class="NO">LineDDA</li>
+            <li class="NO">LineDDAProc</li>
+            <li>LineTo</li>
+            <li>MoveToEx</li>
+            <li class="NO">PolyBezier</li>
+            <li class="NO">PolyBezierTo</li>
+            <li class="NO">PolyDraw</li>
+            <li class="NO">Polyline</li>
+            <li class="NO">PolylineTo</li>
+            <li class="NO">PolyPolyline</li>
+            <li class="NO">SetArcDirection</li>
+        </ul>
+        <li class="NOPE">Metafile functions</li>
+        <li class="NO">Multiple Display Monitors functions</li>
+        <ul>
+            <li class="NO">EnumDisplayMonitors</li>
+            <li class="NO">GetMonitorInfo</li>
+            <li class="NO">MonitorEnumProc</li>
+            <li class="NO">MonitorFromPoint</li>
+            <li class="NO">MonitorFromRect</li>
+            <li class="NO">MonitorFromWindow</li>            
+        </ul>
+        <li>Painting and Drawing functions</li>
+        <ul>
+            <li>BeginPaint</li>
+            <li class="NO">DrawAnimatedRects</li>
+            <li class="NO">DrawCaption</li>
+            <li class="NO">DrawEdge</li>
+            <li class="NO">DrawFocusRect</li>
+            <li class="NO">DrawFrameControl</li>
+            <li class="NO">DrawState</li>
+            <li class="NO">DrawStateProc</li>
+            <li>EndPaint</li>
+            <li class="NO">ExcludeUpdateRgn</li>
+            <li class="NO">GdiFlush</li>
+            <li class="NO">GdiGetBatchLimit</li>
+            <li class="NO">GdiSetBatchLimit</li>
+            <li class="NO">GetBkColor</li>
+            <li class="NO">GetBkMode</li>
+            <li class="NO">GetBoundsRect</li>
+            <li class="NO">GetROP2</li>
+            <li class="NO">GetUpdateRect</li>
+            <li class="NO">GetUpdateRgn</li>
+            <li>GetWindowDC</li>
+            <li class="NO">GetWindowRgn</li>
+            <li class="NO">GetWindowRgnBox</li>
+            <li class="NO">GrayString</li>
+            <li>InvalidateRect</li>
+            <li class="NO">InvalidateRgn</li>
+            <li class="NO">LockWindowUpdate</li>
+            <li class="NO">OutputProc</li>
+            <li class="NO">PaintDesktop</li>
+            <li>RedrawWindow</li>
+            <li>SetBkColor</li>
+            <li>SetBkMode</li>
+            <li class="NO">SetBoundsRect</li>
+            <li>SetROP2</li>
+            <li class="NO">SetWindowRgn</li>
+            <li>UpdateWindow</li>
+            <li class="NO">ValidateRect</li>
+            <li class="NO">ValidateRgn</li>
+            <li>WindowFromDC</li>
+        </ul>
+        <li class="NO">Path functions</li>
+        <ul>
+            <li class="NO">AbortPath</li>
+            <li class="NO">BeginPath</li>
+            <li class="NO">CloseFigure</li>
+            <li class="NO">EndPath</li>
+            <li class="NO">FillPath</li>
+            <li class="NO">FlattenPath</li>
+            <li class="NO">GetMiterLimit</li>
+            <li class="NO">GetPath</li>
+            <li class="NO">PathToRegion</li>
+            <li class="NO">SetMiterLimit</li>
+            <li class="NO">StrokeAndFillPath</li>
+            <li class="NO">StrokePath</li>
+            <li class="NO">WidenPath</li>
+        </ul>
+        <li>Pen functions</li>
+        <ul>
+            <li>CreatePen</li>
+            <li>CreatePenIndirect</li>
+            <li>ExtCreatePen</li>
+            <li>SetDCPenColor</li>
+        </ul>
+        <li>Rectangle functions</li>
+        <ul>
+            <li class="NO">CopyRect</li>
+            <li class="NO">EqualRect</li>
+            <li class="NO">InflateRect</li>
+            <li class="NO">IntersectRect</li>
+            <li class="NO">IsRectEmpty</li>
+            <li class="NO">OffsetRect</li>
+            <li class="NO">PtInRect</li>
+            <li>SetRect</li>
+            <li class="NO">SetRectEmpty</li>
+            <li class="NO">SubtractRect</li>
+            <li class="NO">UnionRect</li>
+        </ul>
+        <li class="NO">Region functions</li>
+        <ul>
+            <li class="NO">CombineRgn</li>
+            <li class="NO">CreateEllipticRgn</li>
+            <li class="NO">CreateEllipticRgnIndirect</li>
+            <li class="NO">CreatePolygonRgn</li>
+            <li class="NO">CreatePolyPolygonRgn</li>
+            <li>CreateRectRgn</li>
+            <li class="NO">CreateRectRgnIndirect</li>
+            <li class="NO">CreateRoundRectRgn</li>
+            <li class="NO">EqualRgn</li>
+            <li class="NO">ExtCreateRegion</li>
+            <li class="NO">FillRgn</li>
+            <li class="NO">FrameRgn</li>
+            <li class="NO">GetPolyFillMode</li>
+            <li class="NO">GetRegionData</li>
+            <li class="NO">GetRgnBox</li>
+            <li class="NO">InvertRgn</li>
+            <li class="NO">OffsetRgn</li>
+            <li class="NO">PaintRgn</li>
+            <li class="NO">PtInRegion</li>
+            <li class="NO">RectInRegion</li>
+            <li class="NO">SetPolyFillMode</li>
+            <li class="NO">SetRectRgn</li>
+        </ul>
+    </ul>
 </body>
 </html>
