gdimaxxing oh shoot i gotta go to bed no more jbs
added a bunch of gdi and some other random functions instead of doing my work since i didn't have to go to school today

lol i realized that i should've been adding 43 instead of 42

--- a/scripts/d2dstatus.html
+++ b/scripts/d2dstatus.html
@@ -651,17 +651,17 @@
             <li>CreateCompatibleBitmap</li>
             <li>CreateDIBitmap</li>
             <li>CreateDIBSection</li>
-            <li class="NO">ExtFloodFill</li>
-            <li class="NO">GetBitmapDimensionEx</li>
+            <li>ExtFloodFill</li>
+            <li>GetBitmapDimensionEx</li>
             <li class="NO">GetDIBColorTable</li>
             <li>GetDIBits</li>
             <li>GetPixel</li>
             <li>GetStretchBltMode</li>
             <li class="NO">GradientFill</li>
-            <li class="NO i">LoadBitmap</li>
+            <li class="NOPE">LoadBitmap</li>
             <li>MaskBlt</li>
             <li>PlgBlt</li>
-            <li class="NO">SetBitmapDimensionEx</li>
+            <li>SetBitmapDimensionEx</li>
             <li class="NO">SetDIBColorTable</li>
             <li>SetDIBits</li>
             <li class="NO">SetDIBitsToDevice</li>
@@ -680,7 +680,7 @@
             <li>CreatePatternBrush</li>
             <li>CreateSolidBrush</li>
             <li class="NO">GetBrushOrgEx</li>
-            <li class="NO">GetSysColorBrush</li>
+            <li class="NOPE">GetSysColorBrush</li>
             <li>PatBlt</li>
             <li class="NO">SetBrushOrgEx</li>
             <li>SetDCBrushColor</li>
@@ -709,11 +709,11 @@
             <li class="NO">ChangeDisplaySettingsEx</li>
             <li>CreateCompatibleDC</li>
             <li>CreateDC</li>
-            <li class="NO">CreateIC</li>
+            <li class="NOPE">CreateIC</li>
             <li>DeleteDC</li>
             <li>DeleteObject</li>
             <li class="NO">DeviceCapabilities</li>
-            <li class="NO">DrawEscape</li>
+            <li class="NOPE">DrawEscape</li>
             <li class="NO">EnumDisplayDevices</li>
             <li class="NO">EnumDisplaySettings</li>
             <li class="NO">EnumDisplaySettingsEx</li>
@@ -721,17 +721,17 @@
             <li class="NO">EnumObjectsProc</li>
             <li>GetCurrentObject</li> <!--wow i wish i found this function sooner-->
             <li>GetDC</li>
-            <li class="NO">GetDCBrushColor</li>
+            <li>GetDCBrushColor</li>
             <li>GetDCEx</li>
-            <li class="NO">GetDCOrgEx</li>
-            <li class="NO">GetDCPenColor</li>
+            <li>GetDCOrgEx</li>
+            <li>GetDCPenColor</li>
             <li class="NO">GetDeviceCaps</li>
             <li class="NO">GetLayout</li>
-            <li class="NO">GetObject</li>
-            <li class="NO">GetObjectType</li>
+            <li class="UNTESTED">GetObject</li> <!--technically yes-->
+            <li>GetObjectType</li>
             <li>GetStockObject</li>
             <li>ReleaseDC</li>
-            <li class="NO">ResetDC</li>
+            <li class="NOPE">ResetDC</li>
             <li>RestoreDC</li>
             <li>SaveDC</li>
             <li>SelectObject</li>
@@ -742,16 +742,16 @@
         </ul>
         <li>Filled shapes</li>
         <ul>
-            <li class="NO">Chord</li>
+            <li>Chord</li>
             <li>Ellipse</li>
             <li>FillRect</li>
-            <li class="NO">FrameRect</li>
-            <li class="NO">InvertRect</li>
-            <li class="NO">Pie</li>
-            <li class="NO">Polygon</li>
+            <li>FrameRect</li>
+            <li>InvertRect</li>
+            <li>Pie</li>
+            <li>Polygon</li>
             <li class="NO">PolyPolygon</li>
             <li>Rectangle</li>
-            <li class="NO">RoundRect</li>
+            <li>RoundRect</li>
         </ul>
         <li>Font and Text functions</li>
         <ul>
@@ -785,7 +785,7 @@
             <li class="NO">GetTabbedTextExtent</li>
             <li class="NO">GetTextAlign</li>
             <li class="NO">GetTextCharacterExtra</li>
-            <li class="NO">GetTextColor</li>
+            <li>GetTextColor</li>
             <li class="NO">GetTextExtentExPoint</li>
             <li class="NO">GetTextExtentExPointI</li>
             <li class="NO">GetTextExtentPoint32</li>
@@ -817,8 +817,8 @@
             <li class="NO">PolyBezier</li>
             <li class="NO">PolyBezierTo</li>
             <li class="NO">PolyDraw</li>
-            <li class="NO">Polyline</li>
-            <li class="NO">PolylineTo</li>
+            <li>Polyline</li>
+            <li>PolylineTo</li>
             <li class="NO">PolyPolyline</li>
             <li class="NO">SetArcDirection</li>
         </ul>
@@ -847,10 +847,10 @@
             <li class="NO">GdiFlush</li>
             <li class="NO">GdiGetBatchLimit</li>
             <li class="NO">GdiSetBatchLimit</li>
-            <li class="NO">GetBkColor</li>
-            <li class="NO">GetBkMode</li>
+            <li>GetBkColor</li>
+            <li>GetBkMode</li>
             <li class="NO">GetBoundsRect</li>
-            <li class="NO">GetROP2</li>
+            <li>GetROP2</li>
             <li class="NO">GetUpdateRect</li>
             <li class="NO">GetUpdateRgn</li>
             <li>GetWindowDC</li>
