no more gdi-maxxing, for now... (and other stuff)
bruh i've been trying to deploy a regular driver sample (kbfiltr) to my virtual machine and i've had issue after issue

first i couldn't figure out how to have the virtual machine be on the same network as my computer

second when i finally got that working, provisioning the machine didn't work and i still am not sure but i realized that on the target machine i had a different version of the wdk downloaded so im about to restart my computer to see if that's the solution

oh yeah today i was going through all my scripts to make sure they all still work (minus layeredwindows.js) and left comments and shit yk

i solved the mystery as to why DllLoad.js didn't work and for some reason on the virtual machine every GL related script didn't work and crashed immediately (idk what's up with that)

--- a/scripts/d2dstatus.html
+++ b/scripts/d2dstatus.html
@@ -657,7 +657,7 @@
             <li>GetDIBits</li>
             <li>GetPixel</li>
             <li>GetStretchBltMode</li>
-            <li class="NO">GradientFill</li>
+            <li>GradientFill</li>
             <li class="NOPE">LoadBitmap</li>
             <li>MaskBlt</li>
             <li>PlgBlt</li>
@@ -749,7 +749,7 @@
             <li>InvertRect</li>
             <li>Pie</li>
             <li>Polygon</li>
-            <li class="NO">PolyPolygon</li>
+            <li>PolyPolygon</li>
             <li>Rectangle</li>
             <li>RoundRect</li>
         </ul>
@@ -819,7 +819,7 @@
             <li class="NO">PolyDraw</li>
             <li>Polyline</li>
             <li>PolylineTo</li>
-            <li class="NO">PolyPolyline</li>
+            <li>PolyPolyline</li>
             <li class="NO">SetArcDirection</li>
         </ul>
         <li class="NOPE">Metafile functions</li>
@@ -861,7 +861,7 @@
             <li class="NO">InvalidateRgn</li>
             <li class="NO">LockWindowUpdate</li>
             <li class="NO">OutputProc</li>
-            <li class="NO">PaintDesktop</li>
+            <li>PaintDesktop</li>
             <li>RedrawWindow</li>
             <li>SetBkColor</li>
             <li>SetBkMode</li>
