ReadFile breaking changes, maintenance, and how creating my first driver took 10 months
lol the title of this commit is only meant to sound like youtube clickbait but if you're actually interested in that story go ahead and check out my new driver!
https://github.com/MagicQuest/VirtualHIDivinations

ReadFile's function signature is now
ReadFile(hFile, bytesToRead, cstring, overlapped, asByteArray).
Notice the new cstring and asByteArray parameters!

for some reason scripts/opencv/wallpaperengine.js won't draw to the actual desktop anymore lol

anyways yeah this commit was mainly about my drivers (and maintaining all my scripts)

after this commit i'll also be uploading a release of JBS3 because i only recently learned how to do that lol

--- a/scripts/d2dstatus.html
+++ b/scripts/d2dstatus.html
@@ -788,7 +788,7 @@
             <li>GetTextColor</li>
             <li class="NO">GetTextExtentExPoint</li>
             <li class="NO">GetTextExtentExPointI</li>
-            <li class="NO">GetTextExtentPoint32</li>
+            <li>GetTextExtentPoint32</li>
             <li class="NO">GetTextExtentPointI</li>
             <li class="NO">GetTextFace</li>
             <li class="NO">GetTextMetrics</li>
